# http_client_server

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  clippy.yml
crate/config_utils/: Cargo.toml
crate/config_utils/src/: config_utils.rs  lib.rs  tests.rs
crate/config_utils/src/error/: mod.rs  result.rs
crate/http_client/: Cargo.toml  README.md
crate/http_client/src/: authentication.rs  certificate_verifier.rs  http_client.rs  lib.rs  login.rs  proxy_params.rs  tests.rs  tls.rs
crate/http_client/src/authentication/: either.rs  session.rs
crate/http_client/src/error/: mod.rs
crate/http_client/src/tests/: session_store.rs
crate/logger/: Cargo.toml  README.md
crate/logger/examples/: tracing_example.rs
crate/logger/src/: error.rs  lib.rs  log_utils.rs  macros.rs  main.rs  otlp.rs  telemetry_utils.rs  tracing.rs
