[workspace]
members = ["crate/config_utils", "crate/logger", "crate/http_client"]
resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2021"
rust-version = "1.71.0"
authors = [
    "Bruno Grieder <bruno.grieder@cosmian.com>",
    "Emmanuel Coste <emmanuel.coste@cosmian.com>",
]
license = "BUSL-1.1"
license-file = "LICENSE"
repository = "https://github.com/Cosmian/http_client_server"
keywords = ["server", "utils", "cosmian"]
categories = ["security"]

[profile.release]
lto = true
strip = true

[profile.dev]
strip = "debuginfo"
incremental = false

# proc-macros and build-scripts
[profile.dev.build-override]
strip = "debuginfo"
incremental = false

# external dependencies
[profile.dev.package."*"]
opt-level = 0

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", default-features = false }
thiserror = "2.0"
