[package]
name = "cosmian_http_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP client with multi-authentication support"

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
session = ["dep:actix-identity", "dep:actix-session"]

[dependencies]
actix-identity = { version = "0.9", optional = true }
actix-session = { version = "0.11", optional = true }
actix-web = { version = "4.9", features = ["macros"] }
derive_more = { version = "2.1", features = ["deref", "deref_mut"] }
oauth2 = { version = "5.0", features = ["reqwest"] }
reqwest = { version = "0.12", features = [
  "default",
  "json",
  "rustls-tls",
  "native-tls",
  "socks",
] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
url = "2.5"
webpki-roots = "1.0"
x509-cert = "0.2.5"

[dev-dependencies]
actix-http = "3.6.0"
anyhow = "1.0.99"
cosmian_logger = { path = "../logger" }
