[package]
name = "cosmian_logger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Logger init"

[dependencies]
opentelemetry = { version = "0.29", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.29", features = [
  "trace",
  "metrics",
  "grpc-tonic",
  "integration-testing",
] }
opentelemetry-semantic-conventions = { version = "0.29", features = [
  "semconv_experimental",
] }
opentelemetry-stdout = { version = "0.29", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.29", default-features = false, features = [
  "trace",
  "rt-tokio",
] }
syslog-tracing = "0.3"
thiserror = { workspace = true }
tokio = { version = "1.47", features = ["full"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-core = "0.1"
tracing-opentelemetry = "0.30"
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "ansi",
] }

[dev-dependencies]
