[package]
name = "cosmian_logger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Logger helper"

[[example]]
name = "tracing_example"
required-features = ["full"]

[features]
default = []
full = [
  "opentelemetry-otlp",
  "opentelemetry-semantic-conventions",
  "opentelemetry-stdout",
  "opentelemetry_sdk",
  "tracing-opentelemetry",
  "syslog-tracing",
]

[dependencies]
opentelemetry = { version = "0.29", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.29", features = [
  "trace",
  "metrics",
  "integration-testing",
  "grpc-tonic",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.29", features = [
  "semconv_experimental",
], optional = true }
opentelemetry-stdout = { version = "0.29", features = [
  "trace",
  "metrics",
], optional = true }
opentelemetry_sdk = { version = "0.29", default-features = false, features = [
  "trace",
], optional = true }
syslog-tracing = { version = "0.3", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { version = "0.30", optional = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "ansi",
] }

[dev-dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
